Add send file code